src/ui/snapshots/bottom_bar_element_draw_should_render_consistently for mode read.snap
---
source: src/ui/bottom_bar_element.rs
expression: terminal.backend()
---
"  j/k  scroll  r  re"
"                    "
"                    "
"  Ctrl+r  refresh da"
"                    "
