src/ui/snapshots/bottom_bar_element_draw_should_render_consistently for mode write.snap
---
source: src/ui/bottom_bar_element.rs
expression: terminal.backend()
---
"  Tab  focus option "
"                    "
"                    "
"  Ctrl+x  exit      "
"                    "
