src/ui/snapshots/divider_element_draw_should_render_consistently_Read.snap
---
source: src/ui/divider_element.rs
expression: terminal.backend()
---
" ▸ Latest tweets    "
"                    "
"                    "
"                    "
"                    "
