src/ui/snapshots/divider_element_draw_should_render_consistently_Write.snap
---
source: src/ui/divider_element.rs
expression: terminal.backend()
---
" ▸ Whatcha cooking t"
"                    "
"                    "
"                    "
"                    "
