src/ui/snapshots/header_element_draw_should_render_consistently.snap
---
source: src/ui/header_element.rs
expression: terminal.backend()
---
" ✦ TWITTERp is good "
"                    "
"                    "
"                    "
"                    "
